minithor/infrastructure/thorium/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thorium-default-ingress
  namespace: thorium
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: "/api/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: thorium-api
                port:
                  number: 80
          - path: "/ui/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: thorium-api
                port:
                  number: 80
          - path: "/assets/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: thorium-api
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thorium-ui-ingress
  namespace: thorium
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/rewrite-target: "/ui/$1"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: thorium-api
                port:
                  number: 80
